# colorstripes

./: .gitignore  README.md  pyproject.toml
examples/: batch_generation.py  custom_params.py
src/colorstripes/: __init__.py  cli.py  generator.py  utils.py
tests/: __init__.py  conftest.py  test_cli.py  test_utils.py
